add get project list to rest api
