# internal/apps/timetoggle/swagger.yml
@@ -40,6 +40,24 @@ paths:
           description: "Server error"
           schema:
             $ref: "#/definitions/ServerError"
+    get:
+      tags:
+        - "project"
+      summary: "Find all projects"
+      description: "Returns a list of all projects"
+      operationId: "getProjectList"
+      produces:
+        - "application/xml"
+        - "application/json"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/Projects"
+        500:
+          description: "Server error"
+          schema:
+            $ref: "#/definitions/ServerError"
   /project/{projectId}:
     get:
       tags:
@@ -146,6 +164,15 @@ paths:
           schema:
             $ref: "#/definitions/ServerError"
 definitions:
+  Projects:
+    type: "object"
+    properties:
+      projects:
+        type: array
+        items:
+          $ref: '#/definitions/Project'
+        xml:
+          name: "Project"
   Project:
     type: "object"
     required:
